Add some JavaDocs more cleanup code, fix pre Lolipop ProgressBar coloring, limit additional quiz data loading on swype to bottom of the list